--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     width: 100vw;
     max-width: fit-content;
-    width: fit-content;
+    width: auto;
     margin-left: 0;
 }
 
