--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ h7{
 #button3{
     background-color: antiquewhite;
     color: black;
-    margin-bottom: ;
+    margin-bottom: 20px;
 }
 
 a  {
