--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body{
     max-width: fit-content;
     width: auto;
     margin-left: 0px;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -34,7 +36,8 @@ h1{
     font-weight: 400;
     color: black;
     background-color: antiquewhite;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     border-bottom: 0px;
 }
 
@@ -100,7 +103,7 @@ h7{
 }
 
 #button1{
-    margin-right: 25px;
+    margin-right: 35px;
     border-top: 0;
     background-color: antiquewhite;
     color: black;
