Revert "Update styles.css"
This reverts commit 6e210db10b25b76c2703463d26d93fd6d433ac65.

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,6 @@ body{
     max-width: fit-content;
     width: auto;
     margin-left: 0px;
-    display: flex;
-    justify-content: center;
 }
 
 
@@ -36,8 +34,7 @@ h1{
     font-weight: 400;
     color: black;
     background-color: antiquewhite;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     border-bottom: 0px;
 }
 
@@ -103,7 +100,7 @@ h7{
 }
 
 #button1{
-    margin-right: 35px;
+    margin-right: 25px;
     border-top: 0;
     background-color: antiquewhite;
     color: black;
