Revert "Update styles.css"
This reverts commit ba029be92c5351f085d997761d2686b3a3d975dd.

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ h7{
 #button3{
     background-color: antiquewhite;
     color: black;
-    margin-bottom: 20px;
+    margin-bottom: ;
 }
 
 a  {
