--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,8 @@ h2 , h4{
 #van-picture{
     width:250px;
     height: 200px;
+    max-width: 250px;
+    max-height: 200px;
     margin-bottom: 0px;
 }
 
