--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,10 @@ h2 , h4{
 }
 
 #van-picture{
-    width:250px;
-    height: 200px;
-    max-width: 250px;
-    max-height: 200px;
+    width: 400px;px;
+    height: 320px;
+    max-width: 400px;
+    max-height: 320px;
     margin-bottom: 0px;
 }
 
