--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ h2 , h4{
 }
 
 #van-picture{
-    width: 400px;px;
+    width: 400px;
     height: 320px;
     max-width: 400px;
     max-height: 320px;
