--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,9 @@ h7{
 #button1{
     margin-right: 25px;
     border-top: 0;
+    margin-top: 0;
     background-color: antiquewhite;
     color: black;
-    
 }
 
 #button2{
