--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,8 @@ h6{
     display: flex;
     justify-content: center;
     margin-bottom: 25px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin: 0;
 }
 
 #button1{
@@ -103,6 +105,7 @@ h6{
 h7{
     display: flex;
     justify-content: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 #button1{
