--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,6 @@ h6{
     display: flex;
     justify-content: center;
     margin-bottom: 25px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 #button1{
@@ -104,7 +103,6 @@ h6{
 h7{
     display: flex;
     justify-content: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 #button1{
@@ -113,6 +111,8 @@ h7{
     margin-top: 0;
     background-color: antiquewhite;
     color: black;
+    font-size: x-large;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 #button2{
@@ -121,15 +121,20 @@ h7{
     margin-top: 0;
     background-color: antiquewhite;
     color: black;
+    font-size: x-large;
+    font-family: sf pro display;
 }
+
 
 #button3{
     background-color: antiquewhite;
     color: black;
     margin-bottom: 20px; 
     margin-top: 15px;
-    border-top: 0;
+    border-top: 0; font-size: x-large;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 
 a  {
     color:black ;
