--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,6 @@ a:active {
 }
 
 button{
-    font-size: x-large;
+    font-size: large;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
