--- a/styles.css
+++ b/styles.css
@@ -94,11 +94,11 @@ h6{
 }
 
 #button1{
-    scale: 115%;
+    scale: 85%;
 }
 
 #button2, #button3{
-    scale: 115%}
+    scale: 85%}
 
 h7{
     display: flex;
@@ -147,7 +147,6 @@ a:active {
 }
 
 button{
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
