--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,6 @@ h7{
 }
 
 #button1{
-    margin-right: 5px;
     border-top: 0;
     margin-top: 0;
     background-color: antiquewhite;
@@ -115,7 +114,6 @@ h7{
 }
 
 #button2{
-    margin-left: 5px;
     border-top: 0;
     margin-top: 0;
     background-color: antiquewhite;
@@ -147,7 +145,6 @@ a:active {
 }
 
 .buttons{
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
