--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,8 @@ a:active {
 }
 
 .buttons{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
