--- a/styles.css
+++ b/styles.css
@@ -149,4 +149,5 @@ a:active {
     flex-direction: column;
     gap: 10px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin: 0 auto;
 }
