--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,8 @@ h7{
     background-color: antiquewhite;
     color: black;
     margin-bottom: 20px; 
-    margin-top: 15px;
+    padding-top: 0;
+    margin-top: 0;
     border-top: 0; font-size: x-large;
 }
 
