--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,8 @@ h7{
     padding-top: 0;
     margin-top: 0;
     border-top: 0; font-size: x-large;
+    position: absolute;
+    top: 3.5cm;
 }
 
 
