--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,8 @@ h7{
     background-color: antiquewhite;
     color: black;
     font-size: x-large;
+    position: absolute;
+    top: 220px;
 }
 
 #button2{
@@ -123,6 +125,8 @@ h7{
     font-size: x-large;
     margin-bottom: 0;
     padding-bottom: 5px;
+    position: absolute;
+    top: 250px;
 }
 
 
@@ -134,9 +138,8 @@ h7{
     margin-top: 0;
     border-top: 0; font-size: x-large;
     position: absolute;
-    top: 300px;
+    top: 280px;
 }
-
 
 a  {
     color:black ;
