--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ h7{
     color: black;
     font-size: x-large;
     margin-bottom: 0;
-    padding-bottom: 5px;
+    padding-bottom: 0;
 }
 
 
@@ -132,7 +132,10 @@ h7{
     margin-bottom: 20px; 
     padding-top: 0;
     margin-top: 0;
-    border-top: 0; font-size: x-large;
+    border-top: 0; 
+    font-size: x-large;
+    position: fixed;
+    top: 280px;
 }
 
 a  {
