--- a/styles.css
+++ b/styles.css
@@ -117,8 +117,8 @@ h7{
 
 #button2{
     border-top: 0;
-    margin-top: 0px;
-    padding-top: 15px;
+    margin-top: 15px;
+    padding-top: 0;
     background-color: antiquewhite;
     color: black;
     font-size: x-large;
