--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,8 @@ body{
     background-color: rgb(0, 0, 0);
     color: antiquewhite;
     font-family: Arial, Helvetica, sans-serif;
-    width: 100vw;
+    width: 800px;
     max-width: fit-content;
-    width: auto;
     margin-left: 0px;
 }
 
