change title image size

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body{
 }
 
 .title-img{
-    width: 700px;
+    width: 99vw;
     height: 300px;
     max-width: fit-content;
     margin-bottom: 0px;
