--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,9 @@ h3{
     display: flex;
     justify-content: center;
     padding-top: 10px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    padding-top: 10px;
 }
 
 #van-picture{
@@ -84,12 +87,17 @@ h1 , h2, h3 , h4 , h5{
 h4{
     margin-bottom: 0px;
     margin-top: 0px;
+    padding-top: 15px;
+    padding-bottom: 0px;
 }
 
 h5{
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
+
 
 h2{
     padding-right: 7px;
@@ -167,4 +175,11 @@ a:active {
     gap: 10px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0 auto;
+}
+
+.select{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
