--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
-    background-color: rgb(0, 0, 0);
-    color: antiquewhite;
+    background-color: antiquewhite;
+    color: rgb(34, 15, 89);
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 0px;
 }
@@ -31,16 +31,16 @@ h1{
 }
 
 .divider{
-    border-bottom: 6px dotted antiquewhite;
+    border-bottom: 6px dotted rgb(34, 15, 89);
     margin: 5px 0;
 }
 
 .select{
     font-size: large;
     font-weight: 400;
-    color: black;
+    color: antiquewhite;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: antiquewhite;
+    background-color: rgb(34, 15, 89);
     text-align: center;
     border-bottom: 0px;
 }
@@ -127,8 +127,8 @@ h7{
 #button1{
     border-top: 0;
     margin-top: 0;
-    background-color: antiquewhite;
-    color: black;
+    background-color: rgb(34, 15, 89);
+    color: antiquewhite;
     font-size: x-large;
 }
 
@@ -136,8 +136,8 @@ h7{
     border-top: 0;
     margin-top: 25px;
     padding-top: 0;
-    background-color: antiquewhite;
-    color: black;
+    background-color: rgb(34, 15, 89);
+    color: antiquewhite;
     font-size: x-large;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -145,8 +145,8 @@ h7{
 
 
 #button3{
-    background-color: antiquewhite;
-    color: black;
+    background-color: rgb(34, 15, 89);
+    color: antiquewhite;
     margin-bottom: 20px; 
     padding-top: 0;
     margin-top: 0;
@@ -156,10 +156,10 @@ h7{
 }
 
 a  {
-    color:black ;
+    color:antiquewhite ;
 }
 a:visited {
-    color:black;
+    color:blueviolet;
 }
 a:hover {
     color:blueviolet ;
